--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.14.0",
-    "node-aplay": "^1.0.3",
+    "node-mpg123": "^1.0.2-23",
     "request": "^2.72.0"
   },
   "devDependencies": {},
